# prep

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  pyproject.toml  tables.py
code/src/: two_pointers.py
code/tests/: two_pointers_test.py
coding/src/: bin_search.py  dfs.py  fast_and_slow_pointers.py  hm.py  in_place_ll.py  knowing_what_to_track.py  linked_list.py  ll.py  stack.py  two_pointers.py
coding/tests/: bin_search_test.py  fast_and_slow_pointers_test.py  stack_test.py  two_pointers_test.py
coding_patterns/: map.md
coding_patterns/2pointers/: __next_lexicographical_seq.py  largest_container.py  largestcontainer.py  next_lexicographical_seq.py  pair_sum.py  palindrome.py  shiftzeroestoend.py  tripletsum.py
coding_patterns/bs/: insertion_idx.py
coding_patterns/heaps/: __combine_sorted_ll.py  k_most_frequent_string.py
coding_patterns/hm_&_hs/: __pair_sum_unsorted.py  __zero_stripping.py  geometric_sequence_triplets.py  longest_consecutive_chain.py  verify_sudoku_board.py  zero_stripping.py
coding_patterns/intervals/: merge_overlapping_intervals.py
dsa_ucsd/: divideconquer_bin_search.py  divideconquer_bin_search_duplicates.py  divideconquer_count_inversions.py  divideconquer_lottery_covering_points.py  divideconquer_majority_elt.py  divideconquer_pairwise_min_distance.py  divideconquer_quicksort.py  dp_edit_distance.py  dp_lcs2.py  dp_lcs3.py  dp_money_change.py  dp_primitive_calculator.py  greedy_car_fueling.py  greedy_change.py  greedy_covering_segments.py  greedy_different_summands.py  greedy_dot_product.py  greedy_fractional_knapsack.py  greedy_largest_number.py  max_pairwise_product.py  warmup_2-3_gcd.py  warmup_extra_josephus.py  warmup_fibonacci.py  warmup_fibonacci_huge.py  warmup_fibonacci_last_digit.py  warmup_fibonacci_partial_sum.py  warmup_fibonacci_sum_last_digit.py  warmup_fibonacci_sum_squares.py  warmup_gcd.py  warmup_lcm.py
guessing_game/: Cargo.toml
leetcode150/: merge_sorted_array.py  remove_duplicates_from_sorted_array.py  remove_element.py
ml/: linear.py
ood/: general considerations.md  parking_lot.py  patterns.md
rustlings/: .gitignore  Cargo.toml  rust-analyzer.toml
src/: main.rs
system/: cloud.md  scaling.excalidraw  scaling.md
(+23 files in other folders)
