[project]
name = "prep"
version = "0.1.0"
description = "interview prep"
authors = [{ name = "marcalph" }]
requires-python = ">=3.11,<4"
dependencies = [
    "hypothesis>=6.102.4,<7",
    "numpy>=2.2.3,<3",
    "scikit-learn>=1.6.1,<2",
    "tabulate>=0.9.0,<0.10",
]

[dependency-groups]
dev = [
    "pre-commit>=3.6.2,<4",
    "black>=24.3.0,<25",
    "isort>=5.13.2,<6",
    "pytest>=8.1.1,<9",
    "flake8>=7.0.0,<8",
    "mypy>=1.9.0,<2",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "ruff"
