[project]
name = "prep"
version = "0.1.0"
description = "interview prep"
authors = [{ name = "marcalph" }]
requires-python = ">=3.11,<4"
dependencies = [
    "hypothesis>=6.102.4,<7",
    "numpy>=2.2.3,<3",
    "scikit-learn>=1.6.1,<2",
    "tabulate>=0.9.0,<0.10",
]

[dependency-groups]
dev = [
    "pre-commit>=3.6.2,<4",
    "pytest>=8.1.1,<9",
    "ruff>=0.8.0",
    "pyright>=1.1.389",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 240

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402", "E711", "E741", "F811"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "off"
